--- a/crimepredictorbackend/requirements.txt
+++ b/crimepredictorbackend/requirements.txt
@@ -30,7 +30,7 @@ social-auth-app-django==5.4.0
 social-auth-core==4.5.3
 sqlparse==0.4.4
 threadpoolctl==3.4.0
-typing_extensions==4.10.0
+typing_extensions
 tzdata==2024.1
 urllib3==2.2.1
 whitenoise==6.6.0
