--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
     "recharts": "^2.12.5",
     "tailwind-datepicker-react": "^1.4.3"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.11",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
@@ -34,5 +37,10 @@
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+        "not dead",
+        "not op_mini all"
+      ]
 }
